fix: newyork dark image in dark mode

--- a/src/page-contents/Home/Header/styles.module.scss
+++ b/src/page-contents/Home/Header/styles.module.scss
@@ -41,4 +41,9 @@
   @media screen and (min-width: 998px) {
     padding: 10rem 0;
   }
+
+  background-image: url("/img/newyork-light.jpg");
+  [data-theme="dark"] & {
+    background-image: url("/img/newyork-dark.jpg");
+  }
 }
